# rago

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
code_architecture/overview/: index.html
docs/: index.md
docs/code_architecture/: overview.md
docs/usage_guide/dataset/: data_loader.md  generator.md
docs/usage_guide/evaluation/: evaluator.md  metrics.md
docs/usage_guide/optimization/: run_experiment.md  tpe.md
docs/usage_guide/rag/: rag_concepts.md  rag_configuration.md  reader.md  retriever.md
installation/elasticsearch/: index.html
installation/ollama/: index.html
rago/: prompts.py  utils.py
rago/data_objects/: __init__.py  base.py  document.py  eval_sample.py  evaluation_result.py  metric.py  prompt_template.py  rag_config.py  rag_output.py  retrieved_context.py
rago/dataset/: __init__.py  base.py  rag_dataset.py
rago/dataset/dataloader/: __init__.py  base.py
rago/dataset/generator/: __init__.py  base.py  simple.py
rago/dataset/processor/: __init__.py  base.py  dataset_names.py
rago/eval/: __init__.py  base.py  bert_score.py  order.py  relevancy.py  sequential.py  sim_score.py
rago/eval/llm_evaluator/: __init__.py  (+3 more)
rago/experiment/: base.py  optim.py
search/: search_index.json
tests/: conftest.py
tests/assets/: expected_dataset.csv  expected_dataset.json  expected_sampled_dataset.json  expected_sampled_rag_dataset.json  fake_documents.txt  hotpot_qa_test_sample.json
tests/test_dataset/: conftest.py  test_hotpot_qa_processor.py  test_qa_dataset.py  test_rag_dataset.py
tests/test_evaluation/: test_relevancy.py
tests/test_model/: test_langchain.py  test_llama_index.py  test_llm.py  test_message.py
(+83 files in other folders)
